[gd_scene load_steps=17 format=3 uid="uid://qjcttr0b0kht"]

[ext_resource type="Script" uid="uid://csu27gdyci43k" path="res://Textures/player/rpm_selector.gd" id="1_l8xbd"]
[ext_resource type="Texture2D" uid="uid://dbr0of3vvh6fe" path="res://control_menu/control-slider.png" id="2_clhu6"]
[ext_resource type="Texture2D" uid="uid://dkgicexsd0jig" path="res://control_menu/control-arrow.png" id="3_e3cem"]
[ext_resource type="Texture2D" uid="uid://ckc1en67xtyby" path="res://control_menu/header.png" id="4_hf1jm"]
[ext_resource type="Texture2D" uid="uid://c5nhabmcxmaxb" path="res://control_menu/x.png" id="5_xkjow"]

[sub_resource type="Theme" id="Theme_yaehf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_074og"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cegan"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_82xsv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_getpj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ryguw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d13ii"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1u8w0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0odxb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lswn8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a6jrf"]

[node name="RPMSelector" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_l8xbd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1135.2325
offset_top = 294.0
offset_right = 1858.6279
offset_bottom = 596.0
texture = ExtResource("2_clhu6")

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect"]
layout_mode = 0
offset_left = 60.767456
offset_top = 195.0
offset_right = 652.76746
offset_bottom = 282.0
theme_override_font_sizes/normal_font_size = 41
text = "0     100       200      300       600"

[node name="ControlArrow" type="Sprite2D" parent="TextureRect"]
position = Vector2(70, 93)
texture = ExtResource("3_e3cem")

[node name="RPM0" type="Button" parent="."]
layout_mode = 0
offset_left = 1163.0
offset_top = 328.0
offset_right = 1250.0
offset_bottom = 564.0351
theme = SubResource("Theme_yaehf")
theme_override_styles/normal = SubResource("StyleBoxEmpty_074og")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cegan")
theme_override_styles/hover = SubResource("StyleBoxEmpty_82xsv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_getpj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ryguw")

[node name="RPM100" type="Button" parent="."]
layout_mode = 0
offset_left = 1263.0
offset_top = 337.0
offset_right = 1363.0
offset_bottom = 567.0351
theme = SubResource("Theme_yaehf")
theme_override_styles/normal = SubResource("StyleBoxEmpty_074og")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cegan")
theme_override_styles/hover = SubResource("StyleBoxEmpty_82xsv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_getpj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ryguw")

[node name="RPM200" type="Button" parent="."]
layout_mode = 0
offset_left = 1401.0
offset_top = 332.0
offset_right = 1507.0
offset_bottom = 566.0351
theme = SubResource("Theme_yaehf")
theme_override_styles/normal = SubResource("StyleBoxEmpty_074og")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cegan")
theme_override_styles/hover = SubResource("StyleBoxEmpty_82xsv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_getpj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ryguw")

[node name="RPM300" type="Button" parent="."]
layout_mode = 0
offset_left = 1537.0
offset_top = 338.0
offset_right = 1648.0
offset_bottom = 567.0351
theme = SubResource("Theme_yaehf")
theme_override_styles/normal = SubResource("StyleBoxEmpty_074og")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cegan")
theme_override_styles/hover = SubResource("StyleBoxEmpty_82xsv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_getpj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ryguw")

[node name="RPM600" type="Button" parent="."]
layout_mode = 0
offset_left = 1686.0
offset_top = 343.0
offset_right = 1789.0
offset_bottom = 568.0351
theme = SubResource("Theme_yaehf")
theme_override_styles/normal = SubResource("StyleBoxEmpty_074og")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cegan")
theme_override_styles/hover = SubResource("StyleBoxEmpty_82xsv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_getpj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ryguw")

[node name="RPMLabel" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1168.9999
offset_top = 86.0
offset_right = 1965.4911
offset_bottom = 410.5614
scale = Vector2(0.57, 0.57)
texture = ExtResource("4_hf1jm")

[node name="RichTextLabel" type="RichTextLabel" parent="RPMLabel"]
layout_mode = 0
offset_left = 108.77215
offset_top = 73.684204
offset_right = 740.35126
offset_bottom = 263.1579
theme_override_font_sizes/normal_font_size = 106
text = "RPM Select
"

[node name="CloseButton" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1661.0
offset_top = 98.0
offset_right = 1821.0
offset_bottom = 258.0
texture = ExtResource("5_xkjow")

[node name="Button" type="Button" parent="CloseButton"]
layout_mode = 0
offset_left = -4.0
offset_right = 165.0
offset_bottom = 165.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_d13ii")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1u8w0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0odxb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lswn8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_a6jrf")

[connection signal="pressed" from="RPM0" to="." method="_on_rpm_0_pressed"]
[connection signal="pressed" from="RPM100" to="." method="_on_rpm_100_pressed"]
[connection signal="pressed" from="RPM200" to="." method="_on_rpm_200_pressed"]
[connection signal="pressed" from="RPM300" to="." method="_on_rpm_300_pressed"]
[connection signal="pressed" from="RPM600" to="." method="_on_rpm_600_pressed"]
[connection signal="pressed" from="CloseButton/Button" to="." method="_on_button_pressed"]
